--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variaveis";
+
 .menu {
     width: 18%;
   
@@ -20,7 +22,7 @@
         a {
           font-weight: 700;
           color: #7b78e5;
-          font-family: "GandhiSansRegular";
+          font-family: $fonte-bold;
         }
       }
     }
@@ -36,6 +38,6 @@
       text-decoration: none;
       font-size: 1.125rem;
       color: #d9d9d9;
-      font-family: "GandhiSansRegular"
+      font-family: $fonte-normal;
     }
 }
