--- a/src/components/Rodape/Rodape.module.scss
+++ b/src/components/Rodape/Rodape.module.scss
@@ -24,5 +24,12 @@
     margin: 0;
     color: $cor-do-texto;
     font-family: $fonte-normal;
+
+    a {
+      color: $roxo;
+      border-bottom: 2px solid $azul-claro;
+      text-decoration: none;
+      transition: all 0.2s;
+    }
   }
 }
