--- a/src/components/Galeria/Galeria.module.scss
+++ b/src/components/Galeria/Galeria.module.scss
@@ -3,6 +3,7 @@
 .galeria {
   font-family: $fonte-normal;
   margin-bottom: 2rem;
+  width: 65vw;
 
   h2 {
     color: $roxo;
@@ -25,14 +26,14 @@
     margin-right: 1rem;
     margin-bottom: 1.35rem;
     cursor: pointer;
-    transition: all 0.18s;
+    transition: all 0.2s;
 
     &:hover {
       box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
-      -moz-transform: scale(1.1);
-      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.15);
+      -webkit-transform: scale(1.15);
       transform: scale(1.025);
-      transition: 0.18s;
+      transition: 0.2s;
     }
 
     div {
